# libsimplegl

./: .gitignore  Makefile.am  README.md  configure.ac  simplegl.pc.in
assets/shaders/: cube-100.f.glsl  cube-100.v.glsl  fire.f.glsl  fire.v.glsl  flag-150.f.glsl  flag-150.v.glsl  overlay-100.f.glsl  overlay-100.v.glsl  overlay-150.f.glsl  overlay-150.v.glsl  skybox.f.glsl  skybox.v.glsl  text-100.f.glsl  text-100.v.glsl  text-150.f.glsl  text-150.v.glsl  triangle.f.glsl  triangle.v.glsl  volume-render.f.glsl
assets/volumes/: .gitattributes  lobster-301x324x56.raw  stagbeetle-832x832x494.raw  stent-512x512x174.raw  virgo-256x256x256-3.raw
projects/xcode/cube.xcodeproj/: project.pbxproj
projects/xcode/cube.xcodeproj/project.xcworkspace/xcshareddata/: cube.xccheckout
projects/xcode/cube.xcodeproj/xcuserdata/joe.xcuserdatad/xcschemes/: cube.xcscheme  xcschememanagement.plist
projects/xcode/flag.xcodeproj/: project.pbxproj
projects/xcode/flag.xcodeproj/xcuserdata/joe.xcuserdatad/xcschemes/: flag.xcscheme  xcschememanagement.plist
projects/xcode/libsimplegl.xcodeproj/: project.pbxproj
projects/xcode/libsimplegl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/xcode/libsimplegl.xcodeproj/project.xcworkspace/xcshareddata/: libsimplegl.xccheckout
projects/xcode/libsimplegl.xcodeproj/project.xcworkspace/xcuserdata/joe.xcuserdatad/: UserInterfaceState.xcuserstate
projects/xcode/libsimplegl.xcodeproj/project.xcworkspace/xcuserdata/manvscode.xcuserdatad/: UserInterfaceState.xcuserstate
projects/xcode/libsimplegl.xcodeproj/xcuserdata/joe.xcuserdatad/xcschemes/: libsimplegl-ios.xcscheme  libsimplegl-shared.xcscheme  libsimplegl-static.xcscheme  xcschememanagement.plist
projects/xcode/libsimplegl.xcodeproj/xcuserdata/manvscode.xcuserdatad/xcschemes/: libsimplegl.xcscheme  xcschememanagement.plist
projects/xcode/simplegl-demos.xcworkspace/: contents.xcworkspacedata
projects/xcode/simplegl-demos.xcworkspace/xcshareddata/: simplegl-demos.xccheckout
projects/xcode/skybox.xcodeproj/: project.pbxproj
projects/xcode/skybox.xcodeproj/xcuserdata/joe.xcuserdatad/xcschemes/: skybox.xcscheme  xcschememanagement.plist
projects/xcode/volume-renderer.xcodeproj/: project.pbxproj
projects/xcode/volume-renderer.xcodeproj/xcuserdata/joe.xcuserdatad/xcschemes/: volume-renderer.xcscheme  xcschememanagement.plist
src/: 3d-axes.c  Makefile.am  buffers.c  camera.c  cube-map.c  default-font.c  default-font.h  extensions.c  grid.c  libsimplegl-config.h  libsimplegl-config.h.in  mat2.c  mat2.h  mat3.c  mat3.h  mat4.c  mat4.h  math-org.c  math-org.h  objects.c  overlays.c  projections.c  raster-font-font1.c  raster-font-font2.c  raster-font-font3.c  raster-font-vincent.c  raster-font.c  raster-fonts.h  shaders.c  simplegl-math.h  simplegl.c  simplegl.h  textures.c  transformations.c  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
tests/: 3daxes.c  Makefile.am  cube.c  cube.f.glsl  cube.v.glsl  flag.c  skybox.c  test-axes.c  test-math.c  test-shaders.c  test-shaders.f.glsl  test-shaders.frag  test-shaders.freeglut.c  test-shaders.v.glsl  test-shaders.vert  triangle.c  volume-render.c
tests/assets/: mouse-150x150x276.raw  volume-render.f.glsl
tests/assets/shaders/: cube.f.glsl  cube.v.glsl  text.f.glsl  text.v.glsl  volume-render.f.glsl  volume-render.v.glsl
tests/assets/volumes/: carp-256x256x512-2.raw
xcode/simplegl.xcodeproj/: project.pbxproj
xcode/simplegl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/simplegl.xcodeproj/project.xcworkspace/xcshareddata/: simplegl.xccheckout
xcode/simplegl.xcodeproj/project.xcworkspace/xcuserdata/manvscode.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/simplegl.xcodeproj/xcuserdata/manvscode.xcuserdatad/xcschemes/: simplegl.xcscheme  xcschememanagement.plist
